--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
